Started fixing comments/bugs as reported by Uche